//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Users {
  id String [pk]
  username String [unique, not null]
  full_name String
  profile_picture String
  phone_number String
  email String [unique, not null]
  password String [not null]
  role Role [not null, default: 'USER']
  address String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  Orders Orders [not null]
  Tailors Tailors
}

Table Tailors {
  id String [pk]
  name String [not null]
  description String
  rating Float
  address String
  longitude String
  latitude String
  opening_time String
  closing_time String
  open_days String[] [not null]
  user_id String [unique, not null]
  Users Users [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  deletedAt DateTime
  Orders Orders [not null]
  TailorImage TailorImage [not null]
}

Table Orders {
  id String [pk]
  due_date DateTime
  order_date DateTime [default: `now()`, not null]
  delivery_address String
  state StateOrder [not null, default: 'AWAITING']
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  user_id String [not null]
  Users Users [not null]
  tailor_id String [not null]
  Tailors Tailors [not null]
  OrderItems OrderItems [not null]
  Payment Payment
}

Table Clothes {
  id String [pk]
  name String [not null]
  price Float
  status ClotheStatus [not null, default: 'AWAITING']
  description String
  quantity Int [not null, default: 1]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  OrderItems OrderItems [not null]
  DetailClothes DetailClothes [not null]
}

Table DetailClothes {
  id String [pk]
  bust_top Float
  waist_top Float
  hips_top Float
  length_top Float
  sleeve_length_top Float
  inseam_bottom Float
  waist_bottom Float
  hips_bottom Float
  length_bottom Float
  cloth_id String [not null]
  Clothes Clothes [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
}

Table OrderItems {
  id Int [pk, increment]
  order_id String [not null]
  Orders Orders [not null]
  cloth_id String [not null]
  Clothes Clothes [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
}

Table Payment {
  id String [pk]
  price Float [not null]
  status PaymentStatus [not null, default: 'AWAITING']
  due_date DateTime
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  order_id String [unique, not null]
  Orders Orders [not null]
  payment_method Int
  PaymentMethods PaymentMethods
}

Table PaymentMethods {
  id Int [pk, increment]
  name String [not null]
  Payment Payment [not null]
}

Table TailorImage {
  id String [pk]
  image_url String [not null]
  tailor_id String [not null]
  Tailors Tailors [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  deletedAt DateTime
}

Enum Role {
  TAILOR
  USER
}

Enum StateOrder {
  AWAITING
  MEASURING
  SEWING
  FITTING
  DELIVER
  PAYMENT
  CANCELLED
  DONE
}

Enum ClotheStatus {
  AWAITING
  ONGOING
  DONE
  CANCELLED
}

Enum PaymentStatus {
  SUCCESS
  AWAITING
  FAILED
}

Ref: Tailors.user_id - Users.id

Ref: Orders.user_id > Users.id

Ref: Orders.tailor_id > Tailors.id

Ref: DetailClothes.cloth_id > Clothes.id

Ref: OrderItems.order_id > Orders.id

Ref: OrderItems.cloth_id > Clothes.id

Ref: Payment.order_id - Orders.id

Ref: Payment.payment_method > PaymentMethods.id

Ref: TailorImage.tailor_id > Tailors.id